big additions to chapter 2, some notes added to ch 3

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,4 +1,5 @@
 \chapter{Narratives and Counternarratives}
+\label{chap:2}
 
 %% was sources \& ideologies
 %% 2. Where is that coming from?
@@ -1333,7 +1334,7 @@ taxonomies ignore the external labor involved in automation:
 human action displaced in space and time. Where do remotely monitored
 systems fit? What about human preparatory work that allows for
 automated systems to operate? These are questions to which we will
-return in chapters \ref{chap:chap2} and \ref{chap:chap3}. For the
+return in chapters \ref{chap:3} and \ref{chap:4}. For the
 moment, however, let us turn to consider the stakes of the
 visions we have seen. Why do these kinds of assumptions matter? And what
 reasons might we have for investigating alternatives?
