--- a/chap3.tex
+++ b/chap3.tex
@@ -1,4 +1,5 @@
 \chapter{Hybrid Controls, Hybrid Possibilities}
+\label{chap:4}
 
 Technological Realities (27 p)
 
@@ -31,6 +32,12 @@ As a way to INTRODUCE HSC, actually
 
 \subsection{Lessons from Autonomy Research}
 
+Apollo/Mars rover
+
+Underwater exploration
+
+Aircraft (see Digital Apollo ch 2)
+
 \subsection{Whither Alternate Narratives?}
 
 note especially the contradiction within X's characterization of human
@@ -39,6 +46,15 @@ have our licenses taken away'' compared with ``car nuts should welcome
 this because it will free the roads up for them'' which doesn't
 actually make sense!
 --but there's perhaps a middle ground here in the hybrid narrative
+
+-question of whether people will be allowed to drive
+--self-contradictory comments: Daniela Rus saying
+-that people will still be able to drive normally
+-these questions are deeply embedded in the idea of progress: does
+-greater safety imply taking licenses away? a question that really
+-only makes sense with a particular vision of autonomy (perhaps a
+-better question is what sort of licensing/training is necessary)
+
 
 1) bring in the telerobotics/supervisory control literature
 -why supervisory control? and where is it used? (5 p)
